--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
+    "mongoose": "^5.3.7",
     "nodemon": "^1.18.4"
   }
 }
